# climonitor

./: .env.local.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  test_ansi.rs  test_interactive.sh
.github/workflows/: ci.yml  release.yml
docs/: code-structure.md  configuration.md  state-detectors.md
examples/: config-grpc.toml  config-remote.toml  config-secure.toml  config-tcp.toml  config-unix.toml
examples/notifications/: README.md  notify.ps1  windows-toast.sh
launcher/: Cargo.toml
launcher/src/: claude_state_detector.rs  claude_tool.rs  claude_wrapper.rs  cli_tool.rs  gemini_state_detector.rs  gemini_tool.rs  grpc_client.rs  launcher_client.rs  lib.rs  main.rs  screen_buffer.rs  screen_claude_detector.rs  screen_gemini_detector.rs  screen_state_detector.rs  session_state.rs  state_detector.rs  tool_wrapper.rs  transport_client.rs
launcher/src/transports/: grpc.rs  mod.rs  unix.rs
launcher/tests/: README.md  integration_state_detection.rs  integration_tool_wrapper.rs  test_connected_state_transition.rs  test_ui_context_preservation.rs
launcher/tests/common/: mod.rs  test_fixtures.rs
monitor/: Cargo.toml
monitor/src/: grpc_server.rs  lib.rs  live_ui.rs  main.rs  monitor_server.rs  notification.rs  session_manager.rs  transport_server.rs  unicode_utils.rs
monitor/src/transports/: grpc.rs  mod.rs  unix.rs
monitor/tests/: README.md  integration_protocol_basic.rs  integration_regression_detection.rs  integration_session_management.rs
monitor/tests/common/: mod.rs  test_fixtures.rs
proto/: monitor.proto
shared/: Cargo.toml  build.rs
shared/src/: cli_tool.rs  climonitor.rs  config.rs  grpc_transport.rs  ip_utils.rs  lib.rs  logging.rs  message_conversion.rs  protocol.rs  transport.rs  unix_transport.rs
src/: ansi_utils.rs  app.rs  claude_wrapper.rs  config.rs  launcher_client.rs  lib.rs  live_ui.rs  main.rs  monitor_server.rs  process_monitor.rs  protocol.rs  session.rs  session_manager.rs  session_state.rs  standard_analyzer.rs  status_detector.rs  ui.rs  unicode_utils.rs  watcher.rs
tests/: edge_cases_test.rs  pty_simulation_test.rs  session_state_test.rs
