[package]
name = "ccmonitor"
version = "0.1.0"
edition = "2021"
description = "Monitor Claude session status in real-time"
authors = ["kaz"]
license = "MIT"

[[bin]]
name = "ccmonitor"
path = "src/main.rs"

[[bin]]
name = "ccmonitor-launcher"
path = "bin/ccmonitor-launcher.rs"

[dependencies]
# UI dependencies removed for Phase 3
# ratatui = "0.25"
# crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# File watching removed for Phase 3
# notify = "6.1"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
# Directory utilities removed for Phase 3
# dirs = "5.0"
unicode-width = "0.1"
unicode-segmentation = "1.10"
# Environment file loading removed for Phase 3
# dotenvy = "0.15"
# Temporary file utilities removed for Phase 3
# tempfile = "3.8"
regex = "1.10"

[dev-dependencies]