[workspace]
members = [
    "shared",
    "launcher", 
    "monitor"
]
resolver = "2"

[workspace.dependencies]
# Common dependencies across workspace
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Launcher-specific dependencies
portable-pty = "0.8"
terminal_size = "0.3"
signal-hook = "0.3"
libc = "0.2"

# Monitor-specific dependencies
unicode-width = "0.1"
unicode-segmentation = "1.10"
regex = "1.10"