[workspace]
members = [
    "shared",
    "launcher", 
    "monitor"
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["climonitor contributors"]
license = "MIT"
repository = "https://github.com/kizaaku/climonitor"
homepage = "https://github.com/kizaaku/climonitor"
description = "Real-time monitoring and state detection for CLI tool sessions"
keywords = ["claude", "monitoring", "cli", "terminal", "pty"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[workspace.dependencies]
# Common dependencies across workspace
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Launcher-specific dependencies
portable-pty = "0.9"
terminal_size = "0.3"
signal-hook = "0.3"
libc = "0.2"

# Monitor-specific dependencies
unicode-width = "0.1"
unicode-segmentation = "1.10"
regex = "1.10"
term_size = "0.3"
home = "0.5"
async-trait = "0.1"

# Test dependencies
tempfile = "3.8"
tokio-test = "0.4"

