[package]
name = "ccmonitor-launcher"
version.workspace = true
edition.workspace = true
description = "Claude Code launcher with real-time monitoring"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "ccmonitor-launcher"
path = "src/main.rs"

[dependencies]
ccmonitor-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
portable-pty = "0.8"
terminal_size = "0.3"
signal-hook = "0.3"
libc = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["term", "fs"] }
vte = "0.13"