[package]
name = "climonitor-launcher"
version.workspace = true
edition.workspace = true
description = "CLI tool launcher with real-time monitoring"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "climonitor-launcher"
path = "src/main.rs"

[dependencies]
climonitor-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
portable-pty = "0.9"
terminal_size = "0.3"
signal-hook = "0.3"
libc = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
vte = "0.13"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "fs"] }

# Windows-specific dependencies  
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "wincon", "winbase"] }

[dev-dependencies]
climonitor-monitor = { path = "../monitor" }
tempfile = "3.8"
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }