[package]
name = "ccmonitor-monitor"
version.workspace = true
edition.workspace = true
description = "Real-time monitoring display for Claude Code sessions"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "ccmonitor"
path = "src/main.rs"

[dependencies]
ccmonitor-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
unicode-width = "0.1"
unicode-segmentation = "1.10"
regex = "1.10"
signal-hook = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
term_size = "0.3"