[package]
name = "climonitor-monitor"
version.workspace = true
edition.workspace = true
description = "Real-time monitoring display for CLI tool sessions"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "climonitor"
path = "src/main.rs"

[dependencies]
climonitor-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
unicode-width.workspace = true
unicode-segmentation.workspace = true
regex = "1.10"
signal-hook = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
term_size.workspace = true
home.workspace = true

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
async-trait = "0.1"

[dev-dependencies]
climonitor-launcher = { path = "../launcher" }
tempfile = "3.8"
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }