[package]
name = "ccmonitor-shared"
version = "0.1.0"
edition = "2021"
description = "Shared protocol and utilities for ccmonitor"
authors = ["kaz"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }