[package]
name = "climonitor-shared"
version.workspace = true
edition.workspace = true
description = "Shared protocol and utilities for climonitor"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["net", "io-util", "fs"] }
home = "0.5"
async-trait = "0.1"
paste = "1.0"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"